Fix overflow in hero text

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -459,7 +459,7 @@ h1, h2, h3, h4 {
     padding: 0;
 
     h1 {
-      font-size: 4rem;
+      font-size: 2.75rem;
       font-weight: 700;
       color: var(--light-gray);
       line-height: 1.2;
